<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:layout_marginHorizontal="18dp"
    android:layout_marginTop="20dp"
    android:background="@drawable/rounded_corner_item_box"
    android:orientation="horizontal">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/iconFrame"
        android:layout_width="96dp"
        android:layout_height="80dp"
        android:background="@drawable/rounded_corner_item_image">

        <ImageView
            android:id="@+id/productIcon"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:contentDescription="@string/item_image"
            android:src="@drawable/icon_bread"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            android:id="@+id/deleteButton"
            android:layout_width="35dp"
            android:layout_height="26dp"
            android:background="@drawable/delete_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:layout_gravity="center"
                android:contentDescription="@string/delete_icon"
                android:src="@drawable/icon_delete" />
        </FrameLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/itemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="23dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/toast"
            android:textColor="@color/black"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/itemPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="23dp"
            android:layout_marginTop="3dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/_1_99"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/itemName" />

        <ImageView
            android:id="@+id/plusImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="15dp"
            android:contentDescription="@string/plus_sign"
            android:padding="18dp"
            android:src="@drawable/icon_plus"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/numberOfItems"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/_1"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@id/plusImage"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/minusImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="5dp"
            android:contentDescription="@string/minus_sign"
            android:paddingHorizontal="18dp"
            android:paddingVertical="24dp"
            android:src="@drawable/icon_minus"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@id/numberOfItems"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>