<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="115dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="18dp"
    android:layout_marginTop="20dp"
    android:background="@drawable/rounded_corner_item_box_grey"
    android:orientation="horizontal">


    <TextView
        android:id="@+id/addressName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/home"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="PrivateResource" />

    <TextView
        android:id="@+id/addressInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/new_cairo_yasmine_5_villa_227"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addressName"
        tools:ignore="PrivateResource" />

    <TextView
        android:id="@+id/phoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/_201114327532"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addressInfo"
        tools:ignore="PrivateResource" />

    <ImageView
        android:id="@+id/rightArrow"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="5dp"
        android:contentDescription="@string/right_arrow"
        android:padding="12.5dp"
        android:src="@drawable/icon_back_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="40dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:layout_width="87dp"
        android:layout_height="41dp"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        android:padding="10dp"
        android:layout_gravity="center"
        android:contentDescription="@string/delete_icon"
        android:src="@drawable/icon_delete_grey" />











</androidx.constraintlayout.widget.ConstraintLayout>