<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/heyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/hey"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/ahmed"
        android:textColor="@color/red"
        android:textSize="24sp"
        app:layout_constraintLeft_toRightOf="@+id/heyText"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/filterButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="25dp"
        android:contentDescription="@string/filter_button"
        android:padding="10dp"
        android:src="@drawable/icon_filter"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RedundantDescriptionCheck" />

    <TextView
        android:id="@+id/subTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:fontFamily="@font/poppins"
        android:text="@string/start_buying_your_groceries"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userName" />


    <ImageView
        android:id="@+id/plusImage"
        android:layout_width="50dp"
        android:visibility="invisible"
        android:layout_height="50dp"
        android:layout_marginStart="-10dp"
        android:contentDescription="@string/plus_sign"
        android:padding="18dp"
        android:src="@drawable/icon_plus"
        android:layout_marginBottom="5dp"
        app:layout_constraintStart_toEndOf="@id/subTitle"
        app:layout_constraintBottom_toTopOf="@id/searchBar"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/searchBar"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="15dp"
        android:hint="@string/search"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subTitle"
        app:startIconDrawable="@drawable/icon_search">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/searchBarEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/loading_products"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="22dp"
        android:background="@color/white"
        android:clipToPadding="false"
        android:paddingBottom="50dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchBar" />


</androidx.constraintlayout.widget.ConstraintLayout>