<?xml version="1.0" encoding="utf-8"?>

<layout>
    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_dialog_box"
                android:layout_gravity="center"
                android:layout_marginHorizontal="16dp"
                android:elevation="5dp">

                <TextView
                    android:id="@+id/filterText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="23dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/filter"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/menu"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="291dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:hint="@string/category"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/filterText">

                    <AutoCompleteTextView
                        android:id="@+id/categoriesAutoComplete"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        tools:ignore="LabelFor,TextContrastCheck" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/sortBy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/sort_by"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/menu" />

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="291dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:checkedButton="@+id/radio_button_1"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/sortBy">

                    <RadioButton
                        android:id="@+id/radio_button_0"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/default_text"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/radio_button_1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/price_low_high"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/radio_button_2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/price_high_low"
                        android:textSize="16sp" />
                </RadioGroup>

                <Button
                    android:id="@+id/applyButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="25dp"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/apply"
                    android:textAllCaps="false"
                    android:textSize="16sp"
                    app:backgroundTint="@color/red"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/radioGroup"
                    app:layout_constraintRight_toRightOf="parent" />


                <TextView
                    android:id="@+id/dismissButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/poppins_bold"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="5dp"
                    android:text="@string/dismiss"
                    android:textColor="@color/green"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@+id/radioGroup"
                    app:layout_constraintRight_toLeftOf="@id/applyButton" />


            </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>