<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_marginHorizontal="18dp"
    android:layout_marginTop="20dp"
    android:background="@drawable/rounded_corner_item_box"
    android:orientation="horizontal">


    <FrameLayout
        android:id="@+id/iconFrame"
        android:layout_width="96dp"
        android:layout_height="100dp"
        android:background="@drawable/rounded_corner_item_image">

        <ImageView
            android:id="@+id/productIcon"
            android:layout_width="59dp"
            android:layout_height="59dp"
            android:layout_gravity="center"
            android:contentDescription="@string/item_image" />
    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/itemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="23dp"
            android:layout_marginTop="23dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/toast"
            android:textColor="@color/black"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/itemPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="23dp"
            android:layout_marginTop="3dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/_1_99"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/itemName" />

        <ImageView
            android:id="@+id/rightArrow"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="5dp"
            android:contentDescription="@string/right_arrow"
            android:padding="12.5dp"
            android:src="@drawable/icon_right_arrow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>