<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/cartText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/cart"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/numberOfItems"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/_0_items"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@+id/cartText"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="22dp"
        android:clipToPadding="false"
        android:paddingBottom="50dp"
        app:layout_constraintBottom_toTopOf="@id/checkoutButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberOfItems" />

    <TextView
        android:id="@+id/total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="23dp"
        android:elevation="3dp"
        android:text="@string/_0_00"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/checkoutButton"
        app:layout_constraintRight_toRightOf="@id/checkoutButton"
        app:layout_constraintTop_toTopOf="@id/checkoutButton" />

    <Button
        android:id="@+id/checkoutButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/checkout"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:backgroundTint="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recyclerView" />


</androidx.constraintlayout.widget.ConstraintLayout>