<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="344dp"
        android:layout_height="328dp"
        android:background="@drawable/rounded_dialog_box"
        android:elevation="5dp">

        <ImageView
            android:id="@+id/checkmark"
            android:layout_width="92dp"
            android:layout_height="92dp"
            android:layout_marginTop="45dp"
            android:contentDescription="@string/check_mark_icon"
            android:src="@drawable/icon_check"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/thank_you_for_your_purchase"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/checkmark" />

        <TextView
            android:id="@+id/dismissButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="14dp"
            android:layout_marginBottom="6dp"
            android:fontFamily="@font/poppins_bold"
            android:padding="14dp"
            android:text="@string/dismiss"
            android:textColor="@color/green"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>

